fix: path media

--- a/src/inc/page-footer.html
+++ b/src/inc/page-footer.html
@@ -34,7 +34,7 @@
 
       <div class="footer__item  footer__image">
         <svg width="579" height="386">
-          <use href="/img/sprite.svg#abstract-figures-2"></use>
+          <use href="img/sprite.svg#abstract-figures-2"></use>
         </svg>
       </div>
     </div>
@@ -73,7 +73,7 @@
         <div class="footer__lang">
           <span class="icon">
             <svg width="16" height="16">
-              <use href="/img/sprite.svg#lang"></use>
+              <use href="img/sprite.svg#lang"></use>
             </svg>
           </span>
           Русский
