--- a/src/inc/page-header.html
+++ b/src/inc/page-header.html
@@ -6,8 +6,8 @@
           <li class="header__logo">
             <a href="/">
               <svg width="171" height="25">
-                <use class="header__logo-white" href="/img/sprite.svg#logo-white"></use>
-                <use class="header__logo-black" href="/img/sprite.svg#logo"></use>
+                <use class="header__logo-white" href="img/sprite.svg#logo-white"></use>
+                <use class="header__logo-black" href="img/sprite.svg#logo"></use>
               </svg>
             </a>
           </li>
@@ -40,11 +40,11 @@
 
       <div class="header__collapse  header-collapse">
         <div class="header-collapse__image  header-collapse__image--desk">
-          <img src="/img/abstract-figures.svg" alt="">
+          <img src="img/abstract-figures.svg" alt="">
         </div>
 
         <div class="header-collapse__image  header-collapse__image--mob">
-          <img src="/img/abstract-figures-mob.svg" alt="">
+          <img src="img/abstract-figures-mob.svg" alt="">
         </div>
 
         <div class="header-collapse__content">
@@ -53,13 +53,13 @@
               <div class="header-collapse__header">
                 <div class="header-collapse__logo">
                   <svg width="171" height="25">
-                    <use href="/img/sprite.svg#logo-white"></use>
+                    <use href="img/sprite.svg#logo-white"></use>
                   </svg>
                 </div>
                 <div class="header-collapse__close">
                   <button class="js-header-close" type="button">
                     <svg width="22" height="22">
-                      <use href="/img/sprite.svg#burger"></use>
+                      <use href="img/sprite.svg#burger"></use>
                     </svg>
                   </button>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="header-collapse__lang">
                   <span class="icon">
                     <svg width="16" height="16">
-                      <use href="/img/sprite.svg#lang"></use>
+                      <use href="img/sprite.svg#lang"></use>
                     </svg>
                   </span>
                   Русский
