--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
 <section class="showreel">
   <div class="showreel__container">
-    <video class="video-js  showreel__video" width="1280" height="720" controls poster="/img/video.jpg">
-      <source src="/video/showreel.mp4" type="video/mp4">
+    <video class="video-js  showreel__video" width="1280" height="720" controls poster="img/video.jpg">
+      <source src="video/showreel.mp4" type="video/mp4">
     </video>
     <div class="showreel__target">
        <span class="showreel__play">Play</span>
@@ -44,14 +44,14 @@
 
             <span class="icon">
               <svg width="30" height="30">
-                <use href="/img/sprite.svg#arrow"></use>
+                <use href="img/sprite.svg#arrow"></use>
               </svg>
             </span>
           </div>
 
           <div class="about__image">
             <svg width="544" height="272">
-              <use href="/img/sprite.svg#abstract-figures"></use>
+              <use href="img/sprite.svg#abstract-figures"></use>
             </svg>
           </div>
         </div>
@@ -285,81 +285,81 @@
       <div class="grid__list  favorite-clients__list">
         <div class="grid__item  favorite-clients__item">
           <div class="favorite-clients__logo">
-            <img src="/img/vnukovo.png" class="js-oneFirst  in" width="317" height="168" alt="">
+            <img src="img/vnukovo.png" class="js-oneFirst  in" width="317" height="168" alt="">
 
-            <img src="/img/pink-lemon.png" class="js-oneLast  out" width="317" height="168" alt="">
+            <img src="img/pink-lemon.png" class="js-oneLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/keyrent.png" class="js-twoFirst  in" width="317" height="168" alt="">
+              <img src="img/keyrent.png" class="js-twoFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/asia-import.png" class="js-twoLast  out" width="317" height="168" alt="">
+              <img src="img/asia-import.png" class="js-twoLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/trade.png" class="js-threeFirst  in" width="317" height="168" alt="">
+              <img src="img/trade.png" class="js-threeFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/eat-market.png" class="js-threeLast  out" width="317" height="168" alt="">
+              <img src="img/eat-market.png" class="js-threeLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/synell.png" class="js-fourFirst  in" width="317" height="168" alt="">
+              <img src="img/synell.png" class="js-fourFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/dots.png" class="js-fourLast  out" width="317" height="168" alt="">
+              <img src="img/dots.png" class="js-fourLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/alliance.png" class="js-fiveFirst  in" width="317" height="168" alt="">
+              <img src="img/alliance.png" class="js-fiveFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/vorsicher.png" class="js-fiveLast  out" width="317" height="168" alt="">
+              <img src="img/vorsicher.png" class="js-fiveLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/rakov.png" class="js-tenFirst  in" width="317" height="168" alt="">
+              <img src="img/rakov.png" class="js-tenFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/camp-town.png" class="js-tenLast  out" width="317" height="168" alt="">
+              <img src="img/camp-town.png" class="js-tenLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/new-nordic.png" class="js-nineFirst  in" width="317" height="168" alt="">
+              <img src="img/new-nordic.png" class="js-nineFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/marina.png" class="js-nineLast  out" width="317" height="168" alt="">
+              <img src="img/marina.png" class="js-nineLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/air-device.png" class="js-eightFirst  in" width="317" height="168" alt="">
+              <img src="img/air-device.png" class="js-eightFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/brides.png" class="js-eightLast  out" width="317" height="168" alt="">
+              <img src="img/brides.png" class="js-eightLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/quantum.png" class="js-sevenFirst  in" width="317" height="168" alt="">
+              <img src="img/quantum.png" class="js-sevenFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/tom-farr.png" class="js-sevenLast  out" width="317" height="168" alt="">
+              <img src="img/tom-farr.png" class="js-sevenLast  out" width="317" height="168" alt="">
           </div>
         </div>
 
         <div class="grid__item  favorite-clients__item">
            <div class="favorite-clients__logo">
-              <img src="/img/atlas-college.png" class="js-sixFirst  in" width="317" height="168" alt="">
+              <img src="img/atlas-college.png" class="js-sixFirst  in" width="317" height="168" alt="">
 
-              <img src="/img/flyboard.png" class="js-sixLast  out" width="317" height="168" alt="">
+              <img src="img/flyboard.png" class="js-sixLast  out" width="317" height="168" alt="">
           </div>
         </div>
       </div>
@@ -378,27 +378,27 @@
 
           <div class="services__image">
             <svg width="374" height="374">
-              <use href="/img/services.svg#ui-design"></use>
+              <use href="img/services.svg#ui-design"></use>
             </svg>
 
             <svg width="376" height="351">
-              <use href="/img/services.svg#branding"></use>
+              <use href="img/services.svg#branding"></use>
             </svg>
 
             <svg width="345" height="345">
-              <use href="/img/services.svg#mobile-app"></use>
+              <use href="img/services.svg#mobile-app"></use>
             </svg>
 
             <svg width="350" height="352">
-              <use href="/img/services.svg#motion-design"></use>
+              <use href="img/services.svg#motion-design"></use>
             </svg>
 
             <svg width="381" height="352">
-              <use href="/img/services.svg#graphic-design"></use>
+              <use href="img/services.svg#graphic-design"></use>
             </svg>
 
             <svg width="347" height="361">
-              <use href="/img/services.svg#marketing"></use>
+              <use href="img/services.svg#marketing"></use>
             </svg>
           </div>
         </div>
@@ -419,7 +419,7 @@
 
                 <div class="list-services__accent">
                   <svg width="374" height="374">
-                    <use href="/img/services.svg#ui-design"></use>
+                    <use href="img/services.svg#ui-design"></use>
                   </svg>
                 </div>
 
@@ -429,7 +429,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -457,7 +457,7 @@
 
                 <div class="list-services__accent">
                   <svg width="376" height="351">
-                    <use href="/img/services.svg#branding"></use>
+                    <use href="img/services.svg#branding"></use>
                   </svg>
                 </div>
 
@@ -467,7 +467,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -495,7 +495,7 @@
 
                 <div class="list-services__accent">
                   <svg width="345" height="345">
-                    <use href="/img/services.svg#mobile-app"></use>
+                    <use href="img/services.svg#mobile-app"></use>
                   </svg>
                 </div>
 
@@ -505,7 +505,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -527,7 +527,7 @@
 
                 <div class="list-services__accent">
                   <svg width="350" height="352">
-                    <use href="/img/services.svg#motion-design"></use>
+                    <use href="img/services.svg#motion-design"></use>
                   </svg>
                 </div>
 
@@ -537,7 +537,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -567,7 +567,7 @@
 
                 <div class="list-services__accent">
                   <svg width="381" height="352">
-                    <use href="/img/services.svg#graphic-design"></use>
+                    <use href="img/services.svg#graphic-design"></use>
                   </svg>
                 </div>
 
@@ -577,7 +577,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -601,7 +601,7 @@
 
                 <div class="list-services__accent">
                   <svg width="347" height="361">
-                    <use href="/img/services.svg#marketing"></use>
+                    <use href="img/services.svg#marketing"></use>
                   </svg>
                 </div>
 
@@ -611,7 +611,7 @@
 
                     <span class="icon">
                       <svg width="12" height="12">
-                        <use href="/img/sprite.svg#arrow-top"></use>
+                        <use href="img/sprite.svg#arrow-top"></use>
                       </svg>
                     </span>
                   </div>
@@ -699,8 +699,8 @@
       <div class="grid__list  cources__media">
         <div class="grid__item">
           <div class="cources__container">
-            <video class="video-js  cources__video" width="1280" height="720" controls poster="/img/promo.jpg">
-              <source src="/video/showreel.mp4" type="video/mp4">
+            <video class="video-js  cources__video" width="1280" height="720" controls poster="img/promo.jpg">
+              <source src="video/showreel.mp4" type="video/mp4">
             </video>
             <div class="cources__target">
               <span class="cources__play">Play</span>
@@ -736,7 +736,7 @@
                 <div class="card-client">
                   <div class="card-client__accent">
                     <div class="card-client__image">
-                      <img src="/img/client1.jpg" alt="">
+                      <img src="img/client1.jpg" alt="">
                     </div>
                   </div>
 
@@ -758,7 +758,7 @@
 
                       <div class="card-client__logo">
                         <svg width="62" height="46">
-                          <use href="/img/sprite.svg#flyboard"></use>
+                          <use href="img/sprite.svg#flyboard"></use>
                         </svg>
                       </div>
                     </div>
@@ -769,7 +769,7 @@
                 <div class="card-client">
                   <div class="card-client__accent">
                     <div class="card-client__image">
-                      <img src="/img/client1.jpg" alt="">
+                      <img src="img/client1.jpg" alt="">
                     </div>
                   </div>
 
@@ -791,7 +791,7 @@
 
                       <div class="card-client__logo">
                         <svg width="62" height="46">
-                          <use href="/img/sprite.svg#flyboard"></use>
+                          <use href="img/sprite.svg#flyboard"></use>
                         </svg>
                       </div>
                     </div>
@@ -802,7 +802,7 @@
                 <div class="card-client">
                   <div class="card-client__accent">
                     <div class="card-client__image">
-                      <img src="/img/client1.jpg" alt="">
+                      <img src="img/client1.jpg" alt="">
                     </div>
                   </div>
 
@@ -824,7 +824,7 @@
 
                       <div class="card-client__logo">
                         <svg width="62" height="46">
-                          <use href="/img/sprite.svg#flyboard"></use>
+                          <use href="img/sprite.svg#flyboard"></use>
                         </svg>
                       </div>
                     </div>
@@ -835,7 +835,7 @@
                 <div class="card-client">
                   <div class="card-client__accent">
                     <div class="card-client__image">
-                      <img src="/img/client1.jpg" alt="">
+                      <img src="img/client1.jpg" alt="">
                     </div>
                   </div>
 
@@ -857,7 +857,7 @@
 
                       <div class="card-client__logo">
                         <svg width="62" height="46">
-                          <use href="/img/sprite.svg#flyboard"></use>
+                          <use href="img/sprite.svg#flyboard"></use>
                         </svg>
                       </div>
                     </div>
