--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -8,8 +8,8 @@
 
 <section class="project-promo">
   <picture>
-    <source srcset="/img/promo-project-mob.jpg" media="(max-width: 767px)">
-    <img class="project-promo__image" src="/img/promo-project.jpg" alt="">
+    <source srcset="img/promo-project-mob.jpg" media="(max-width: 767px)">
+    <img class="project-promo__image" src="img/promo-project.jpg" alt="">
   </picture>
 
   <div class="project-promo__container">
@@ -51,15 +51,15 @@
 
       <div class="grid__list  project-goals__list">
         <div class="grid__item  project-goals__image  project-goals__image--full">
-          <img src="/img/project1.jpg" width="1680" height="926" alt="">
+          <img src="img/project1.jpg" width="1680" height="926" alt="">
         </div>
 
         <div class="grid__item  project-goals__image">
-          <img src="/img/project2.jpg" width="832" height="620" alt="">
+          <img src="img/project2.jpg" width="832" height="620" alt="">
         </div>
 
         <div class="grid__item  project-goals__image">
-          <img src="/img/project3.jpg" width="832" height="620" alt="">
+          <img src="img/project3.jpg" width="832" height="620" alt="">
         </div>
       </div>
 
@@ -71,11 +71,11 @@
 
       <div class="grid__list  project-goals__list">
         <div class="grid__item  project-goals__image">
-          <img src="/img/project4.jpg" width="832" height="620" alt="">
+          <img src="img/project4.jpg" width="832" height="620" alt="">
         </div>
 
         <div class="grid__item  project-goals__image">
-          <img src="/img/project5.jpg" width="832" height="620" alt="">
+          <img src="img/project5.jpg" width="832" height="620" alt="">
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@
 
       <div class="grid__list  project-goals-small__list">
         <div class="grid__item  project-goals-small__image  project-goals-small__image--full">
-          <img src="/img/project1.jpg" width="1680" height="926" alt="">
+          <img src="img/project1.jpg" width="1680" height="926" alt="">
         </div>
       </div>
 
@@ -111,7 +111,7 @@
 </section>
 
 <section class="project-full-picture">
-  <img class="project-full-picture__image" src="/img/project-full.jpg" alt="">
+  <img class="project-full-picture__image" src="img/project-full.jpg" alt="">
 
   <div class="project-full-picture__wrap">
     <div class="project-full-picture__list">
@@ -152,8 +152,8 @@
 
 <section class="next-project">
   <picture>
-    <source srcset="/img/new-project-mob.jpg" media="(max-width: 767px)">
-    <img class="next-project__image" src="/img/new-project.jpg" alt="">
+    <source srcset="img/new-project-mob.jpg" media="(max-width: 767px)">
+    <img class="next-project__image" src="img/new-project.jpg" alt="">
   </picture>
 
   <div class="next-project__container">
@@ -163,7 +163,7 @@
           Next Project
           <span class="icon">
             <svg width="24" height="24">
-              <use href="/img/sprite.svg#arrow-white"></use>
+              <use href="img/sprite.svg#arrow-white"></use>
             </svg>
           </span>
           </h2>
