--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -14,7 +14,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card1.jpg">
+                <img src="img/card1.jpg">
               </div>
            </div>
 
@@ -40,7 +40,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card2.jpg">
+                <img src="img/card2.jpg">
               </div>
            </div>
 
@@ -66,7 +66,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card6.jpg">
+                <img src="img/card6.jpg">
               </div>
            </div>
 
@@ -92,7 +92,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card7.jpg">
+                <img src="img/card7.jpg">
               </div>
            </div>
 
@@ -118,7 +118,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card8.jpg">
+                <img src="img/card8.jpg">
               </div>
            </div>
 
@@ -144,7 +144,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card9.jpg">
+                <img src="img/card9.jpg">
               </div>
            </div>
 
@@ -170,7 +170,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card4.jpg">
+                <img src="img/card4.jpg">
               </div>
            </div>
 
@@ -196,7 +196,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card5.jpg">
+                <img src="img/card5.jpg">
               </div>
            </div>
 
@@ -222,7 +222,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card10.jpg">
+                <img src="img/card10.jpg">
               </div>
            </div>
 
@@ -248,7 +248,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card12.jpg">
+                <img src="img/card12.jpg">
               </div>
            </div>
 
@@ -274,7 +274,7 @@
           <div class="work-card">
             <div class="work-card__accent">
               <div class="work-card__image">
-                <img src="/img/card11.jpg">
+                <img src="img/card11.jpg">
               </div>
            </div>
 
