fix: current edits

--- a/src/inc/page-header.html
+++ b/src/inc/page-header.html
@@ -13,7 +13,7 @@
           </li>
           <li>
             <ul class="header__menu  header__menu--fold">
-              <li><a href="#">Portfolio</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="#">Studio</a></li>
               <li><a href="#">Academy</a></li>
             </ul>
