fix: current edits

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -7,10 +7,10 @@
 })
 
 <section class="portfolio-promo">
-  <!-- <picture>
-    <source srcset="img/promo-project-mob.jpg" media="(max-width: 767px)">
-    <img class="portfolio-promo__image" src="img/promo-project.jpg" alt="">
-  </picture> -->
+  <video class="portfolio-promo__video" width="720" height="480" loop playsinline autoplay muted poster="img/poster-bg.jpg">
+    <source src="video/bg.mp4" type="video/mp4">
+    <source src="video/bg.webm" type="video/webm">
+  </video>
 
   <div class="portfolio-promo__container">
     <div class="portfolio-promo__wrap">
