fix: current edits

--- a/src/inc/page-header.html
+++ b/src/inc/page-header.html
@@ -68,32 +68,32 @@
               <nav class="header__nav">
                 <ul class="header__menu  header__menu--collapse">
                   <li>
-                    <span class="header-collapse__index">(01)</span>
+                    <span class="header-collapse__index">Our real cases</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Works</a>
                   </li>
                   <li>
-                    <span class="header-collapse__index">(02)</span>
+                    <span class="header-collapse__index">What we can do</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Services</a>
                   </li>
                   <li>
-                    <span class="header-collapse__index">(03)</span>
+                    <span class="header-collapse__index">About our goals</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Studio</a>
                   </li>
                   <li>
-                    <span class="header-collapse__index">(04)</span>
+                    <span class="header-collapse__index">What can we give</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Academy</a>
                   </li>
                   <li>
-                    <span class="header-collapse__index">(05)</span>
+                    <span class="header-collapse__index">Join us</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Careers</a>
                   </li>
                   <li>
-                    <span class="header-collapse__index">(06)</span>
+                    <span class="header-collapse__index">Let’s discuss your idea</span>
                     <span class="header-collapse__divider">/</span>
                     <a href="#">Contact</a>
                   </li>
