--- a/src/index.html
+++ b/src/index.html
@@ -116,40 +116,78 @@
           <div class="works__header">
             <div class="works__title">
               <a class="h2" href="#">Works</a>
+
+              <span class="icon">
+                <svg width="30" height="30">
+                  <use href="img/sprite.svg#arrow"></use>
+                </svg>
+              </span>
             </div>
 
-            <ul class="works__tag">
-              <li>Everything 23</li>
-              <li>Website 10</li>
-              <li>Branding 5</li>
-              <li>Presentation 3</li>
-              <li>Mobile App 2</li>
-              <li>Concept 3</li>
-            </ul>
+            <div class="works__nav">
+              <ul class="works__tag">
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="everything" checked>
+                    <span class="works__frame">Everything <span>23</span></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="website">
+                    <span class="works__frame">Website <span>10</span></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="branding">
+                    <span class="works__frame">Branding <span>5</span></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="presentation">
+                    <span class="works__frame">Presentation <span>3</span></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="mobile-app">
+                    <span class="works__frame">Mobile App <span>2</span></span>
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="works" value="concept">
+                    <span class="works__frame">Concept <span>3</span></span>
+                  </label>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="grid__list">
         <div class="grid__item  works__item  works__item--large">
-          <div class="card-work">
-            <div class="card-work__accent">
-              <div class="card-work__image">
+          <div class="work-card">
+            <div class="work-card__accent">
+              <div class="work-card__image">
                 <img src="img/card1.jpg" alt="">
               </div>
             </div>
 
-            <div class="card-work__content">
-              <div class="card-work__title">
+            <div class="work-card__content">
+              <div class="work-card__title">
                 <h3>Corporate website for Dots Cafe.</h3>
               </div>
 
-              <div class="card-work__tags">
+              <div class="work-card__tags">
                 <ul>
                   <li>UX/UI Design</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Branding</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Motion</li>
                 </ul>
               </div>
@@ -158,24 +196,24 @@
         </div>
 
         <div class="grid__item  works__item">
-          <div class="card-work">
-            <div class="card-work__accent">
-              <div class="card-work__image">
+          <div class="work-card">
+            <div class="work-card__accent">
+              <div class="work-card__image">
                 <img src="img/card2.jpg" alt="">
               </div>
             </div>
 
-            <div class="card-work__content">
-              <div class="card-work__title">
+            <div class="work-card__content">
+              <div class="work-card__title">
                 <h3>Website for videomakers Engine Room.</h3>
               </div>
 
-              <div class="card-work__tags">
+              <div class="work-card__tags">
                 <ul>
                   <li>UX/UI Design</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Branding</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Motion</li>
                 </ul>
               </div>
@@ -184,24 +222,24 @@
         </div>
 
         <div class="grid__item  works__item">
-          <div class="card-work">
-            <div class="card-work__accent">
-              <div class="card-work__image">
+          <div class="work-card">
+            <div class="work-card__accent">
+              <div class="work-card__image">
                 <img src="img/card3.jpg" alt="">
               </div>
             </div>
 
-            <div class="card-work__content">
-              <div class="card-work__title">
+            <div class="work-card__content">
+              <div class="work-card__title">
                 <h3>Personal identety for Keller Henson.</h3>
               </div>
 
-              <div class="card-work__tags">
+              <div class="work-card__tags">
                 <ul>
                   <li>Graphic design</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Branding</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Motion</li>
                 </ul>
               </div>
@@ -210,24 +248,24 @@
         </div>
 
         <div class="grid__item  works__item">
-          <div class="card-work">
-            <div class="card-work__accent">
-              <div class="card-work__image">
+          <div class="work-card">
+            <div class="work-card__accent">
+              <div class="work-card__image">
                 <img src="img/card4.jpg" alt="">
               </div>
             </div>
 
-            <div class="card-work__content">
-              <div class="card-work__title">
+            <div class="work-card__content">
+              <div class="work-card__title">
                 <h3>Mobile app for fitness. Tonal.</h3>
               </div>
 
-              <div class="card-work__tags">
+              <div class="work-card__tags">
                 <ul>
                   <li>UX/UI Design</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Branding</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Development</li>
                 </ul>
               </div>
@@ -236,24 +274,24 @@
         </div>
 
         <div class="grid__item  works__item">
-          <div class="card-work">
-            <div class="card-work__accent">
-              <div class="card-work__image">
+          <div class="work-card">
+            <div class="work-card__accent">
+              <div class="work-card__image">
                 <img src="img/card5.jpg" alt="">
               </div>
             </div>
 
-            <div class="card-work__content">
-              <div class="card-work__title">
+            <div class="work-card__content">
+              <div class="work-card__title">
                 <h3>Personal website Synell.</h3>
               </div>
 
-              <div class="card-work__tags">
+              <div class="work-card__tags">
                 <ul>
                   <li>UX/UI Design</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Branding</li>
-                  <li class="card-work__divider">.</li>
+                  <li class="work-card__divider">.</li>
                   <li>Motion</li>
                 </ul>
               </div>
@@ -374,30 +412,36 @@
         <div class="grid__item  services__accent">
           <div class="services__title">
             <a class="h2" href="#">Services</a>
+
+            <span class="icon">
+              <svg width="30" height="30">
+                <use href="img/sprite.svg#arrow-top-white"></use>
+              </svg>
+            </span>
           </div>
 
           <div class="services__images">
-            <svg id="services-ui-design" class="services__image" width="374" height="374">
+            <svg id="services-ui-design" class="services__image" width="378" height="378">
               <use href="img/services.svg#ui-design"></use>
             </svg>
 
-            <svg id="services-branding" class="services__image" width="376" height="351">
+            <svg id="services-branding" class="services__image" width="378" height="353">
               <use href="img/services.svg#branding"></use>
             </svg>
 
-            <svg id="services-mobile-app" class="services__image" width="345" height="345">
+            <svg id="services-mobile-app" class="services__image" width="347" height="347">
               <use href="img/services.svg#mobile-app"></use>
             </svg>
 
-            <svg id="services-motion-design" class="services__image" width="350" height="352">
+            <svg id="services-motion-design" class="services__image" width="350" height="356">
               <use href="img/services.svg#motion-design"></use>
             </svg>
 
-            <svg id="services-graphic-design" class="services__image" width="381" height="352">
+            <svg id="services-graphic-design" class="services__image" width="383" height="356">
               <use href="img/services.svg#graphic-design"></use>
             </svg>
 
-            <svg id="services-marketing" class="services__image" width="347" height="361">
+            <svg id="services-marketing" class="services__image" width="373" height="363">
               <use href="img/services.svg#marketing"></use>
             </svg>
           </div>
@@ -418,7 +462,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="374" height="374">
+                  <svg width="378" height="378">
                     <use href="img/services.svg#ui-design"></use>
                   </svg>
                 </div>
@@ -456,7 +500,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="376" height="351">
+                  <svg width="378" height="353">
                     <use href="img/services.svg#branding"></use>
                   </svg>
                 </div>
@@ -494,7 +538,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="345" height="345">
+                  <svg width="347" height="347">
                     <use href="img/services.svg#mobile-app"></use>
                   </svg>
                 </div>
@@ -526,7 +570,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="350" height="352">
+                  <svg width="350" height="356">
                     <use href="img/services.svg#motion-design"></use>
                   </svg>
                 </div>
@@ -566,7 +610,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="381" height="352">
+                  <svg width="383" height="356">
                     <use href="img/services.svg#graphic-design"></use>
                   </svg>
                 </div>
@@ -600,7 +644,7 @@
                 </div>
 
                 <div class="list-services__accent">
-                  <svg width="347" height="361">
+                  <svg width="373" height="363">
                     <use href="img/services.svg#marketing"></use>
                   </svg>
                 </div>
@@ -648,6 +692,12 @@
         <div class="grid__item  cources__accent">
           <div class="cources__title">
             <a class="h2" href="#">Cources</a>
+
+            <span class="icon">
+              <svg width="30" height="30">
+                <use href="img/sprite.svg#arrow"></use>
+              </svg>
+            </span>
           </div>
         </div>
 
