--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -28,44 +28,46 @@
     <div class="grid__wrap">
       <div class="grid__list  grid-works__list">
         <div class="grid__item">
-          <ul class="grid-works__tag">
-            <li>
-              <label>
-                <input type="radio" name="works" value="everything" checked>
-                <span class="grid-works__frame">Everything <span>23</span></span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="works" value="website">
-                <span class="grid-works__frame">Website <span>10</span></span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="works" value="branding">
-                <span class="grid-works__frame">Branding <span>5</span></span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="works" value="presentation">
-                <span class="grid-works__frame">Presentation <span>3</span></span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="works" value="mobile-app">
-                <span class="grid-works__frame">Mobile App <span>2</span></span>
-              </label>
-            </li>
-            <li>
-              <label>
-                <input type="radio" name="works" value="concept">
-                <span class="grid-works__frame">Concept <span>3</span></span>
-              </label>
-            </li>
-          </ul>
+          <div class="grid-works__nav">
+            <ul class="grid-works__tag">
+              <li>
+                <label>
+                  <input type="radio" name="works" value="everything" checked>
+                  <span class="grid-works__frame">Everything <span>23</span></span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="works" value="website">
+                  <span class="grid-works__frame">Website <span>10</span></span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="works" value="branding">
+                  <span class="grid-works__frame">Branding <span>5</span></span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="works" value="presentation">
+                  <span class="grid-works__frame">Presentation <span>3</span></span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="works" value="mobile-app">
+                  <span class="grid-works__frame">Mobile App <span>2</span></span>
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="radio" name="works" value="concept">
+                  <span class="grid-works__frame">Concept <span>3</span></span>
+                </label>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
