fix: current edits

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
   </div>
 </section>
 
-<section class="scene  scene--full  drag-text" style="background-color: #fff;">
+<section class="scene  scene--full  drag-text">
   <div class="drag-text__content">
     <div class="drag-text__wrap">
       <h2 class="drag-text__text">Work Hard. Create masterpiece.</h2>
@@ -179,7 +179,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Corporate website for Dots Cafe.</h3>
+                <h3><a href="#">Corporate website for Dots Cafe.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -205,7 +205,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Website for videomakers Engine Room.</h3>
+                <h3><a href="#">Website for videomakers Engine Room.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -231,7 +231,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Personal identety for Keller Henson.</h3>
+                <h3><a href="#">Personal identety for Keller Henson.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -257,7 +257,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Mobile app for fitness. Tonal.</h3>
+                <h3><a href="#">Mobile app for fitness. Tonal.</a></h3>
               </div>
 
               <div class="work-card__tags">
@@ -283,7 +283,7 @@
 
             <div class="work-card__content">
               <div class="work-card__title">
-                <h3>Personal website Synell.</h3>
+                <h3><a href="#">Personal website Synell.</a></h3>
               </div>
 
               <div class="work-card__tags">
