fix: current edits

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -404,7 +404,8 @@
               </div>
 
               <div class="projects-table__item">
-                Mobile app for fitness - Tonal
+                <a href="#">Mobile app for fitness - Tonal</a>
+
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
