fix: current edits

--- a/src/inc/page-footer.html
+++ b/src/inc/page-footer.html
@@ -7,7 +7,15 @@
         <div class="footer__text">
           <p>Let’s create something amazing together</p>
 
-          <a href="mailto:info@artrepin.studio">info@artrepin.studio</a>
+          <div class="footer__mail">
+            <a href="mailto:info@artrepin.studio">info@artrepin.studio</a>
+
+            <span class="icon">
+              <svg width="18" height="18">
+                <use href="img/sprite.svg#arrow-top-white"></use>
+              </svg>
+            </span>
+          </div>
         </div>
 
         <ul class="footer__nav">
