--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,12 @@
       <h2 class="drag-text__text">Work Hard. Create masterpiece.</h2>
     </div>
   </div>
+
+  <div class="drag-text__icon">
+    <svg width="44" height="48">
+      <use href="img/sprite.svg#drop-icon"></use>
+    </svg>
+  </div>
 </section>
 
 <section class="scene  works">
@@ -124,45 +130,47 @@
               </span>
             </div>
 
-            <div class="works__nav">
-              <ul class="works__tag">
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="everything" checked>
-                    <span class="works__frame">Everything <span>23</span></span>
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="website">
-                    <span class="works__frame">Website <span>10</span></span>
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="branding">
-                    <span class="works__frame">Branding <span>5</span></span>
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="presentation">
-                    <span class="works__frame">Presentation <span>3</span></span>
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="mobile-app">
-                    <span class="works__frame">Mobile App <span>2</span></span>
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="works" value="concept">
-                    <span class="works__frame">Concept <span>3</span></span>
-                  </label>
-                </li>
-              </ul>
+            <div class="works__tabs">
+              <div class="works__nav">
+                <ul class="works__tag">
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="everything" checked>
+                      <span class="works__frame">Everything <span>23</span></span>
+                    </label>
+                  </li>
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="website">
+                      <span class="works__frame">Website <span>10</span></span>
+                    </label>
+                  </li>
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="branding">
+                      <span class="works__frame">Branding <span>5</span></span>
+                    </label>
+                  </li>
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="presentation">
+                      <span class="works__frame">Presentation <span>3</span></span>
+                    </label>
+                  </li>
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="mobile-app">
+                      <span class="works__frame">Mobile App <span>2</span></span>
+                    </label>
+                  </li>
+                  <li>
+                    <label>
+                      <input type="radio" name="works" value="concept">
+                      <span class="works__frame">Concept <span>3</span></span>
+                    </label>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
