--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -405,7 +405,6 @@
 
               <div class="projects-table__item">
                 <a href="#">Mobile app for fitness - Tonal</a>
-
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -414,8 +413,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -427,7 +426,7 @@
               </div>
 
               <div class="projects-table__item">
-                Personal identety for Keller Henson
+                <a href="#">Personal identety for Keller Henson</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -436,8 +435,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -449,7 +448,7 @@
               </div>
 
               <div class="projects-table__item">
-                Personal website Synell
+                <a href="#">Personal website Synell</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -458,8 +457,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -471,7 +470,7 @@
               </div>
 
               <div class="projects-table__item">
-                Corporate website for Dots Cafe
+                <a href="#">Corporate website for Dots Cafe</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -480,8 +479,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -493,7 +492,7 @@
               </div>
 
               <div class="projects-table__item">
-                Website for videomakers Engine Room
+                <a href="#">Website for videomakers Engine Room</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -502,8 +501,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -515,7 +514,7 @@
               </div>
 
               <div class="projects-table__item">
-                Mobile app for fitness - Tonal
+                <a href="#">Mobile app for fitness - Tonal</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -524,8 +523,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
@@ -537,7 +536,7 @@
               </div>
 
               <div class="projects-table__item">
-                Personal website Synell
+                <a href="#">Personal website Synell</a>
               </div>
 
               <div class="projects-table__item  projects-table__item--expertise">
@@ -546,8 +545,8 @@
                 </div>
 
                 <span class="icon">
-                  <svg width="18" height="18">
-                    <use href="img/sprite.svg#arrow"></use>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 30 30" fill="#131315">
+                    <path d="M30 30L30 3.33333L25 3.33333L25 21.6667L3.33333 -1.16564e-06L-1.45705e-07 3.33333L21.6667 25L3.33333 25L3.33333 30L30 30Z" />
                   </svg>
                 </span>
               </div>
