--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -64,24 +64,34 @@
       </div>
 
       <div class="grid__list  project-goals__list">
-        <!-- <div class="grid__item  project-goals__video  project-goals__video--full">
-          <div class="project-goals__frame" style="padding-bottom: 56.29%;">
-            <iframe src="https://player.vimeo.com/video/428375410?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="grid__item  project-goals__video  project-goals__video--full">
+          <div class="video-box  video-box--vimeo">
+            <div class="video-box__content" style="padding-bottom: 56.29%;">
+              <iframe src="https://player.vimeo.com/video/428375410?autoplay=1&amp;title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
           </div>
-        </div> -->
-
-        <!-- <div class="grid__item  project-goals__video  js-project-goals__frame">
-          <div class="project-goals__frame" style="padding-bottom: 56.29%;">
-            <iframe class="js-vmeo-video" src="https://player.vimeo.com/video/443962703?title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
-        </div> -->
+        </div>
 
         <div class="grid__item  project-goals__video">
-          <div class="video-box">
+          <div class="video-box  video-box--vimeo">
             <div class="video-box__preview">
-              <!-- <img src="img/promo.jpg" alt=""> -->
+              <img src="img/promo.jpg" alt="">
 
-              <video class="portfolio-promo__video" width="720" height="480" loop playsinline autoplay muted poster="img/poster-bg.jpg">
+              <div class="video-box__play">
+                <span>Play</span>
+             </div>
+            </div>
+
+            <div class="video-box__content" style="padding-bottom: 56.29%;">
+              <iframe class="js-vimeo-video" src="https://player.vimeo.com/video/443962703?title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid__item  project-goals__video">
+          <div class="video-box  video-box--vimeo">
+            <div class="video-box__preview">
+              <video width="720" height="480" loop playsinline autoplay muted>
                 <source src="video/bg.mp4" type="video/mp4">
                 <source src="video/bg.webm" type="video/webm">
               </video>
@@ -92,39 +102,18 @@
             </div>
 
             <div class="video-box__content" style="padding-bottom: 56.29%;">
-              <iframe class="js-vmeo-video" src="https://player.vimeo.com/video/443962703?title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+              <iframe class="js-vimeo-video" src="https://player.vimeo.com/video/443962703?title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
           </div>
         </div>
 
-        <div class="grid__item  project-goals__video">
+        <div class="grid__item  project-goals__video  project-goals__video--full">
           <div class="video-box">
-            <div class="video-box__preview">
-              <!-- <img src="img/promo.jpg" alt=""> -->
-
-              <video class="portfolio-promo__video" width="720" height="480" loop playsinline autoplay muted poster="img/poster-bg.jpg">
-                <source src="video/bg.mp4" type="video/mp4">
-                <source src="video/bg.webm" type="video/webm">
-              </video>
-
-              <div class="video-box__play">
-                <span>Play</span>
-             </div>
-            </div>
-
-            <div class="video-box__content" style="padding-bottom: 56.29%;">
-              <iframe class="js-vmeo-video" src="https://player.vimeo.com/video/443962703?title=0&amp;byline=0&amp;portrait=0&amp;muted=1&amp;loop=1" width="970" height="546" frameborder="0" allow="autoplay; fullscreen" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="grid__item  project-goals__video">
-          <div class="project-goals__frame">
             <video width="1280" height="720" loop playsinline autoplay muted>
               <source src="video/showreel.mp4" type="video/mp4">
             </video>
           </div>
-        </div> -->
+        </div>
       </div>
 
       <div class="grid__list  project-goals__list">
