fix: current edits

--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -223,7 +223,7 @@
     <div class="next-project__wrap">
       <div class="next-project__title">
         <h2>
-          Next Project
+          <a href="#">Next Project</a>
           <span class="icon">
             <svg width="24" height="24">
               <use href="img/sprite.svg#arrow-white"></use>
