fix: current edits

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -36,34 +36,29 @@
                 </a>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="works" value="website">
+                <a href="#">
                   <span class="grid-works__frame">Website <span>10</span></span>
-                </label>
+                </a>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="works" value="branding">
+                <a href="#">
                   <span class="grid-works__frame">Branding <span>5</span></span>
-                </label>
+                </a>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="works" value="presentation">
+                <a href="#">
                   <span class="grid-works__frame">Presentation <span>3</span></span>
-                </label>
+                </a>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="works" value="mobile-app">
+                <a href="#">
                   <span class="grid-works__frame">Mobile App <span>2</span></span>
-                </label>
+                </a>
               </li>
               <li>
-                <label>
-                  <input type="radio" name="works" value="concept">
+                <a href="#">
                   <span class="grid-works__frame">Concept <span>3</span></span>
-                </label>
+                </a>
               </li>
             </ul>
           </div>
